--- a/app/design/frontend/Borovets/default/Magento_Customer/templates/widget/name.phtml
+++ b/app/design/frontend/Borovets/default/Magento_Customer/templates/widget/name.phtml
@@ -1,12 +1,6 @@
 <?php
 /**
- * Roche customer widjet name
- * Add custom attribute 'customer_company'
- *
- * @category  Roche
- * @package   Roche\Customer
- * @author    Roman Chernii <roche@smile.fr>
- * @copyright 2019 Smile
+ * Borovets customer widjet name
  */
 
 /** @var \Magento\Customer\Block\Widget\Name $block */
