--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/listing.phtml
@@ -1,4 +1,6 @@
 <?php
+/** @var $block \Semysiuk\BlogModule\Block\Post\listing */
+/** @var $posts \Semysiuk\BlogModule\Api\Data\PostInterface */
     $posts = $block->getPosts()->getItems();
 ?>
 
