--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/form.phtml
@@ -1,11 +1,5 @@
 <?php
-/**
- * Copyright © Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
- */
-
-// @codingStandardsIgnoreFile
-/** @var \Semysiuk\BlogModule\Block\Post\Form $block */
+/** @var $block \Semysiuk\BlogModule\Block\Post\Form */
 ?>
 <form class="form contact"
       action="<?= $block->escapeUrl($block->getFormUrlLink()) ?>"
