--- a/app/code/Lebed/Blog/view/frontend/layout/lebed_blog_blog_post_view.xml
+++ b/app/code/Lebed/Blog/view/frontend/layout/lebed_blog_blog_post_view.xml
@@ -14,6 +14,7 @@
         <referenceContainer name="content">
             <block class="Lebed\Blog\Block\Post\View" name="post_view" template="Lebed_Blog::post/view.phtml"/>
             <block class="Lebed\Blog\Block\Comment\Listing" name="post_comments_list" template="Lebed_Blog::comment/list.phtml"/>
+            <block class="Magento\Framework\View\Element\Template" name="post.comment.form" template="Lebed_Blog::comment/form.phtml" after="post_comments_list"/>
         </referenceContainer>
     </body>
 </page>
