--- a/app/code/Semysiuk/BlogModule/view/frontend/templates/post/view.phtml
+++ b/app/code/Semysiuk/BlogModule/view/frontend/templates/post/view.phtml
@@ -27,3 +27,7 @@ $comments = $block->getComments();
         <strong><?php echo __('Update at:') ?></strong> <?php echo $post->getUpdateAt(); ?>
     </div>
 </div>
+
+<?php if ($block->getPagerHtml()) : ?>
+    <div class="blog-post-toolbar toolbar bottom"><?php echo $block->getPagerHtml(); ?></div>
+<?php endif; ?>
